--- a/vcNotebook.ipynb
+++ b/vcNotebook.ipynb
@@ -1,6 +1,62 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Name:  aishu\n",
+      "Enter Age:  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello aishu you will be 20 in ten years\n"
+     ]
+    }
+   ],
+   "source": [
+    "q1 = input(\"Enter Name: \")\n",
+    "name = str(q1)\n",
+    "q2 = input(\"Enter Age: \")\n",
+    "age = int(q2)\n",
+    "age = age + 10 \n",
+    "print(\"Hello\" , name , \"you will be\" , age , \"in ten years\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
